--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,25 +2,29 @@
 # defaults file for rbicker.icinga2node
 icinga2_caserver: localhost
 icinga2_configserver: "{{ ansible_configserver }}"
+icinga2_generate_keypair: yes
+icinga2_install_only: no
 icinga2_node_zone: "{{ icinga2_node_endpoint }}"
 icinga2_node_endpoint: "{{ inventory_hostname }}"
-icinga2_node_sync_ca: false
 icinga2_node_global_zone: global-templates
-icinga2_node_local_conf: false
 icinga2_node_features: [api, checker, mainlog]
 icinga2_node_nagios_plugins: [nagios-plugins-all]
+icinga2_node_service_password: ""
+icinga2_node_local_conf: no
+icinga2_node_sync_ca: no
+icinga2_node_service_restart: yes
+icinga2_node_repo_icinga_install: yes
+icinga2_node_repo_epel_install: yes
 icinga2_parent_zone: master
 icinga2_parent_endpoint: "{{ icinga2_parent_zone }}"
 icinga2_parent_port: 5665
-icinga2_cs_endpoint_add: true
 icinga2_cs_endpoint_dir: /etc/icinga2/conf.d/endpoints
-icinga2_cs_endpoint_file: "{{ icinga2_node_endpoint }}.conf" 
-icinga2_cs_host_add: true
-icinga2_cs_host_replace: false
+icinga2_cs_endpoint_file: "{{ icinga2_node_endpoint }}.conf"
 icinga2_cs_host_objectname: "{{ icinga2_node_endpoint }}"
 icinga2_cs_host_dir: /etc/icinga2/conf.d/hosts
 icinga2_cs_host_file: "{{ icinga2_node_endpoint }}.conf"
-icinga2_cs_service_reload: true
-icinga2_repo_icinga_install: yes
-icinga2_repo_epel_install: yes
+icinga2_cs_host_add: yes
+icinga2_cs_host_replace: no
+icinga2_cs_service_reload: yes
+icinga2_cs_endpoint_add: yes
 icinga2_repo_icinga_url: https://packages.icinga.com/epel/7/release/noarch/icinga-rpm-release-7-1.el7.centos.noarch.rpm
