--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,7 @@ icinga2_node_sync_ca: no
 icinga2_node_service_restart: yes
 icinga2_node_repo_icinga_install: yes
 icinga2_node_repo_epel_install: yes
+icinga2_restart_on_failure: yes
 icinga2_parent_zone: master
 icinga2_parent_endpoint: "{{ icinga2_parent_zone }}"
 icinga2_parent_port: 5665
