--- a/tasks/linux_config.yml
+++ b/tasks/linux_config.yml
@@ -85,7 +85,7 @@
     - icinga2_generate_keypair
 
 - name: icinga2 pki new-cert
-  command: |
+  command: >-
     icinga2 pki new-cert --cn {{ icinga2_node_endpoint }}
     --key /etc/icinga2/pki/{{ icinga2_node_endpoint }}.key
     --cert /etc/icinga2/pki/{{ icinga2_node_endpoint }}.crt
@@ -94,7 +94,7 @@
     - icinga2_generate_keypair
 
 - name: icinga2 pki save-cert
-  command: |
+  command: >-
     icinga2 pki save-cert --key /etc/icinga2/pki/{{ icinga2_node_endpoint }}.key
     --cert /etc/icinga2/pki/{{ icinga2_node_endpoint }}.crt
     --trustedcert /etc/icinga2/pki/trusted-master.crt
@@ -104,7 +104,7 @@
     - icinga2_generate_keypair
 
 - name: icinga2 pki request
-  command: |
+  command: >-
     icinga2 pki --host {{ icinga2_parent_host }} --port {{ icinga2_parent_port }}
     --ticket {{ icinga2_pki_ticket.stdout }} --key /etc/icinga2/pki/{{ icinga2_node_endpoint }}.key
     --cert /etc/icinga2/pki/{{ icinga2_node_endpoint }}.crt
@@ -114,7 +114,7 @@
     - icinga2_generate_keypair
 
 - name: icinga2 node setup
-  command: |
+  command: >-
     icinga2 node setup --endpoint {{ icinga2_parent_endpoint }}
     --parent_host {{ icinga2_parent_host }},{{ icinga2_parent_port }}
     --trustedcert /etc/icinga2/pki/trusted-master.crt
