--- a/tasks/windows_config.yml
+++ b/tasks/windows_config.yml
@@ -22,7 +22,7 @@
   when: not icinga2_win_keyfile_stat.stat.exists
 
 - name: icinga2 pki new-cert
-  win_shell: |
+  win_shell: >-
     "{{ icinga2_exe_path }}"
     pki new-cert --cn {{ icinga2_node_endpoint }}
     --key {{ icinga2_win_key_path }}
@@ -31,7 +31,7 @@
   when: not icinga2_win_keyfile_stat.stat.exists
 
 - name: icinga2 pki save-cert
-  win_shell: |
+  win_shell: >-
     "{{ icinga2_exe_path }}"
     pki save-cert --key {{ icinga2_win_key_path }}
     --trustedcert {{ icinga2_win_trusted_path }}
@@ -41,19 +41,20 @@
   when: not icinga2_win_keyfile_stat.stat.exists
 
 - name: icinga2 pki request
-  win_shell: |
-    "{{ icinga2_exe_path }}"
-    pki --cn {{ icinga2_node_endpoint }} --host {{ icinga2_parent_host }} --port {{ icinga2_parent_port }}
-    --ticket {{ icinga2_pki_ticket.stdout }}
-    --key {{ icinga2_win_key_path }} --cert {{ icinga2_win_crt_path }}
-    --trustedcert {{ icinga2_win_trusted_path }}
-    --ca {{ icinga2_win_ca_key_path }}
+  win_shell: "\"{{ ansible_env.ProgramFiles }}\\ICINGA2\\sbin\\icinga2.exe\" pki --cn {{ icinga2_node_endpoint }} --host {{ icinga2_parent_host }} --port {{ icinga2_parent_port }} --ticket {{ icinga2_pki_ticket.stdout }} --key {{ ansible_env.ProgramData }}\\icinga2\\etc\\icinga2\\pki\\{{ icinga2_node_endpoint }}.key --cert {{ ansible_env.ProgramData }}\\icinga2\\etc\\icinga2\\pki\\{{ icinga2_node_endpoint }}.crt --trustedcert {{ ansible_env.ProgramData }}\\icinga2\\etc\\icinga2\\pki\\trusted-master.crt --ca {{ ansible_env.ProgramData }}\\icinga2\\etc\\icinga2\\pki\\ca.key"
+#  win_shell: >-
+#    "{{ icinga2_exe_path }}"
+#    pki request --cn {{ icinga2_node_endpoint }} --host {{ icinga2_parent_host }} --port {{ icinga2_parent_port }}
+#    --ticket {{ icinga2_pki_ticket.stdout }}
+#    --key {{ icinga2_win_key_path }} --cert {{ icinga2_win_crt_path }}
+#    --trustedcert {{ icinga2_win_trusted_path }}
+#    --ca {{ icinga2_win_ca_key_path }}
   args:
     executable: cmd
   when: not icinga2_win_keyfile_stat.stat.exists
 
 - name: icinga2 node setup
-  win_shell: |
+  win_shell: >-
     "{{ icinga2_exe_path }}"
     node setup --cn {{ icinga2_node_endpoint }} --endpoint {{ icinga2_parent_endpoint }}
     --parent_host {{ icinga2_parent_host }},{{ icinga2_parent_port }}
