Add molecule-idempotence-notest tag to epel install

--- a/tasks/linux.yml
+++ b/tasks/linux.yml
@@ -11,6 +11,8 @@
     name: epel-release
     state: present
   when: icinga2_node_repo_epel_install
+  tags:
+    - molecule-idempotence-notest
 
 - name: ensure icinga2 is installed
   yum:
