--- a/tasks/windows.yml
+++ b/tasks/windows.yml
@@ -1,6 +1,11 @@
 ---
 # tasks for windows hosts
 
+- name: ensure chocolatey is installed
+  win_chocolatey:
+    name: chocolatey
+    source: "{{ icinga2_chocolatey_source | default(omit) }}"
+
 - name: ensure icinga2 is installed (using chocolatey)
   win_chocolatey:
     name: icinga2
