set service state to started

--- a/tasks/windows.yml
+++ b/tasks/windows.yml
@@ -24,6 +24,7 @@
 - name: ensure service user is configured
   win_service:
     name: icinga2
+    state: started
     username: "{{ icinga2_node_service_username }}"
     password: "{{ icinga2_node_service_password }}"
   when: icinga2_node_service_username is defined
@@ -32,6 +33,7 @@
 - name: ensure service is delayed
   win_service:
     name: icinga2
+    state: started
     start_mode: delayed
   when: icinga2_node_service_delayed
 
