--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install molecule[docker]
+        pip install molecule[docker] ansible-lint
     - name: Run molecule
       run: |
         molecule test
