retry choco installation

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,6 +17,8 @@ icinga2_node_sync_ca: no
 icinga2_node_service_restart: yes
 icinga2_node_repo_icinga_install: yes
 icinga2_node_repo_epel_install: yes
+icinga2_chocolatey_retries: 5
+icinga2_chocolatey_delay: 10
 icinga2_restart_on_failure: yes
 icinga2_parent_zone: master
 icinga2_parent_endpoint: "{{ icinga2_parent_zone }}"
