enable the user to activate / deactivate features

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,6 +9,7 @@ icinga2_node_zone: "{{ icinga2_node_endpoint }}"
 icinga2_node_endpoint: "{{ inventory_hostname }}"
 icinga2_node_global_zone: global-templates
 icinga2_node_features: [api, checker, mainlog]
+icinga2_node_features_disable: []
 icinga2_node_nagios_plugins: [nagios-plugins-all]
 icinga2_node_service_password: ""
 icinga2_node_service_delayed: no
