option to throttle writing files because of possible race condition

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -45,6 +45,7 @@
   blockinfile:
     name: "{{ icinga2_cs_endpoint_dir }}/{{ icinga2_cs_endpoint_file }}"
     create: yes
+    throttle: "{{ icinga2_cs_endpoint_throttle is defined | ternary(icinga2_cs_endpoint_throttle, omit) }}"
     owner: icinga
     group: icinga
     marker: "// ansible {{ icinga2_node_endpoint }} {mark}"
@@ -74,6 +75,7 @@
     force: "{{ icinga2_cs_host_replace }}"
     src: host.conf.j2
     dest: "{{ icinga2_cs_host_dir }}/{{ icinga2_cs_host_file }}"
+    throttle: "{{ icinga2_cs_host_throttle is defined | ternary(icinga2_cs_host_throttle, omit) }}"
     owner: icinga
     group: icinga
   delegate_to: "{{ icinga2_configserver }}"
