--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -42,7 +42,7 @@
   when: icinga2_cs_endpoint_add
 
 - name: ensure endpoint configuration exists on configserver
-  throttle: "{{ icinga2_cs_endpoint_throttle is defined | ternary(icinga2_cs_endpoint_throttle, omit) }}"
+  throttle: "{{ icinga2_cs_endpoint_throttle is defined | ternary((icinga2_cs_endpoint_throttle | int), omit) }}"
   blockinfile:
     name: "{{ icinga2_cs_endpoint_dir }}/{{ icinga2_cs_endpoint_file }}"
     create: yes
@@ -71,7 +71,7 @@
   when: icinga2_cs_host_add
 
 - name: ensure host config corresponds to template on configserver
-  throttle: "{{ icinga2_cs_host_throttle is defined | ternary(icinga2_cs_host_throttle, omit) }}"
+  throttle: "{{ icinga2_cs_host_throttle is defined | ternary((icinga2_cs_host_throttle | int ), omit) }}"
   template:
     force: "{{ icinga2_cs_host_replace }}"
     src: host.conf.j2
